fix spacing navbar

--- a/portfolio/styles/presentation.scss
+++ b/portfolio/styles/presentation.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    margin-top: 80px;
+    margin-top: 100px;
 
     div:first-of-type{
         z-index: 1;
